# lookcat

./: pyproject.toml
lookcat/: __main__.py  core.py
